Changing workflow in sonar properties file

--- a/SpringBootAssignment/sonar-project.properties
+++ b/SpringBootAssignment/sonar-project.properties
@@ -2,11 +2,8 @@ sonar.projectKey=Swetha-mp-03_SpringBootAssignment_sonar
 sonar.organization=swetha-mp-03
 sonar.host.url=https://sonarcloud.io
 
-# Paths
-sonar.sources=src/main/java
-sonar.tests=src/test/java
-sonar.sourceEncoding=UTF-8
+# Multi-module support
+sonar.modules=employee-assignment,department-assignment
 
-# JaCoCo for coverage
-sonar.java.coveragePlugin=jacoco
-sonar.jacoco.reportPaths=target/site/jacoco/jacoco.xml
+employee-assignment.sonar.projectBaseDir=employee-assignment
+department-assignment.sonar.projectBaseDir=department-assignment
