To attain the maintainability

--- a/SpringBootAssignment/sonar-project.properties
+++ b/SpringBootAssignment/sonar-project.properties
@@ -7,3 +7,5 @@ sonar.modules=employee-assignment,department-assignment
 
 employee-assignment.sonar.projectBaseDir=employee-assignment
 department-assignment.sonar.projectBaseDir=department-assignment
+
+sonar.coverage.exclusions=**/*Application.java
