--- a/SpringBootAssignment/sonar-project.properties
+++ b/SpringBootAssignment/sonar-project.properties
@@ -9,4 +9,4 @@ employee-assignment.sonar.projectBaseDir=employee-assignment
 department-assignment.sonar.projectBaseDir=department-assignment
 
 # Exclusions
-sonar.coverage.exclusions=**/*Application.java, **/ErrorResponse.java
+sonar.coverage.exclusions=**/*Application.java, **/ErrorResponse.java, **/exception/**
